--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "return-fetch": "^0.4.6"
+    "return-fetch": "^0.4.6",
+    "return-fetch-json": "^0.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
